--- a/Comments Transformation.ipynb
+++ b/Comments Transformation.ipynb
@@ -90,10 +90,11 @@
    "source": [
     "# Transformations:\n",
     "## remove underscores before each column\n",
-    "## _UserDisplayName --> drop column\n",
+    "## UserDisplayName --> drop column\n",
     "## nulls in _UserId --> replace with -2\n",
-    "## Date Column --> change to DateTime\n",
-    "## any id --> string to prevent aggregations?"
+    "## Date Column --> change date format to YY-MM-DD\n",
+    "## any id --> string to prevent aggregations?\n",
+    "## store Score column as 32-int datatype to save memory as Score values are usually small"
    ]
   },
   {
@@ -341,17 +342,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "id": "c61a82b9-9fa1-4d76-ae55-8a2fe039c29f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_Comments = df_Comments.withColumn(\"CreationDate\", to_timestamp(\"CreationDate\"))"
+    "# Change Date Format to YY-MM-DD\n",
+    "df_Comments = df_Comments.withColumn(\"CreationDate\", date_format(\"CreationDate\", \"yy-MM-dd\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 97,
    "id": "ad9cce13-448c-4b33-9028-486e1d356738",
    "metadata": {},
    "outputs": [
@@ -359,30 +361,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------+--------------------+---+------+-----+--------------------+------+\n",
-      "|ContentLicense|        CreationDate| Id|PostId|Score|                Text|UserId|\n",
-      "+--------------+--------------------+---+------+-----+--------------------+------+\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:15:...|  1|     3|    7|Could be a poster...|    13|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:16:...|  2|     5|    0|Yes, R is nice- b...|    13|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:18:...|  3|     9|    1|Again- why?  How ...|    13|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:19:...|  4|     5|   11|It's mature, well...|    37|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:22:...|  6|    14|   10|why ask the quest...|    23|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:25:...|  7|    18|    1|also the US censu...|    36|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:30:...|  9|    16|    1|Andrew Gelman has...|    78|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:31:...| 10|    23|    8|I am not sure I u...|  NULL|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:34:...| 11|    43|    5|There are many R ...|     5|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:37:...| 12|    38|    0|That's just an ex...|    54|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:38:...| 13|    20|    2|What levels of ku...|    24|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:38:...| 14|    46|    6|this is an incred...|    74|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:44:...| 15|     3|    3|Maybe the focus s...|    24|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:48:...| 18|    36|   19|http://xkcd.com/552/|    68|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:51:...| 20|    54|    4|I am not sure if ...|  NULL|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:56:...| 21|    77|    1|I like the first ...|     8|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:56:...| 22|    56|   17|I like the analog...|   104|\n",
-      "|  CC BY-SA 2.5|2010-07-19 22:58:...| 24|    73|    1|Very subjective q...|   107|\n",
-      "|  CC BY-SA 2.5|2010-07-19 23:01:...| 27|    77|    1|There's an intere...|    55|\n",
-      "|  CC BY-SA 2.5|2010-07-19 23:03:...| 29|    79|    1|I wasn't suggesti...|    55|\n",
-      "+--------------+--------------------+---+------+-----+--------------------+------+\n",
+      "+--------------+------------+---+------+-----+--------------------+------+\n",
+      "|ContentLicense|CreationDate| Id|PostId|Score|                Text|UserId|\n",
+      "+--------------+------------+---+------+-----+--------------------+------+\n",
+      "|  CC BY-SA 2.5|    10-07-19|  1|     3|    7|Could be a poster...|    13|\n",
+      "|  CC BY-SA 2.5|    10-07-19|  2|     5|    0|Yes, R is nice- b...|    13|\n",
+      "|  CC BY-SA 2.5|    10-07-19|  3|     9|    1|Again- why?  How ...|    13|\n",
+      "|  CC BY-SA 2.5|    10-07-19|  4|     5|   11|It's mature, well...|    37|\n",
+      "|  CC BY-SA 2.5|    10-07-19|  6|    14|   10|why ask the quest...|    23|\n",
+      "|  CC BY-SA 2.5|    10-07-19|  7|    18|    1|also the US censu...|    36|\n",
+      "|  CC BY-SA 2.5|    10-07-19|  9|    16|    1|Andrew Gelman has...|    78|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 10|    23|    8|I am not sure I u...|    -2|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 11|    43|    5|There are many R ...|     5|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 12|    38|    0|That's just an ex...|    54|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 13|    20|    2|What levels of ku...|    24|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 14|    46|    6|this is an incred...|    74|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 15|     3|    3|Maybe the focus s...|    24|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 18|    36|   19|http://xkcd.com/552/|    68|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 20|    54|    4|I am not sure if ...|    -2|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 21|    77|    1|I like the first ...|     8|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 22|    56|   17|I like the analog...|   104|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 24|    73|    1|Very subjective q...|   107|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 27|    77|    1|There's an intere...|    55|\n",
+      "|  CC BY-SA 2.5|    10-07-19| 29|    79|    1|I wasn't suggesti...|    55|\n",
+      "+--------------+------------+---+------+-----+--------------------+------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
