--- a/Comments Transformation.ipynb
+++ b/Comments Transformation.ipynb
@@ -89,12 +89,12 @@
    "metadata": {},
    "source": [
     "# Transformations:\n",
-    "## remove underscores before each column\n",
-    "## UserDisplayName --> drop column\n",
-    "## nulls in _UserId --> replace with -2\n",
-    "## Date Column --> change date format to YY-MM-DD\n",
-    "## any id --> string to prevent aggregations?\n",
-    "## store Score column as 32-int datatype to save memory as Score values are usually small"
+    "### remove underscores before each column\n",
+    "### UserDisplayName --> drop column\n",
+    "### nulls in _UserId --> replace with -2\n",
+    "### Date Column --> change date format to YY-MM-DD\n",
+    "### any id --> string to prevent aggregations?\n",
+    "### store Score column as 32-int datatype to save memory as Score values are usually small"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "id": "f0d00d27-ade4-4c21-aa6f-37942d0becfb",
    "metadata": {},
    "source": [
-    "# remove underscores before each column"
+    "### remove underscores before each column"
    ]
   },
   {
@@ -332,7 +332,7 @@
    "id": "30d192d5-d3a2-4136-9eef-88634a600b3e",
    "metadata": {},
    "source": [
-    "# Drop _UserDisplayName Column"
+    "### drop _UserDisplayName Column"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "id": "dcdffc3b-5eed-4076-ad42-b22df0982691",
    "metadata": {},
    "source": [
-    "# Verify it is gone"
+    "### verify it is gone"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "id": "ad5e18dc-a2b6-4ad6-a29b-2f4ed77a5397",
    "metadata": {},
    "source": [
-    "# Change Date Format to YY-MM-DD"
+    "### change Date Format to YY-MM-DD"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "id": "64f333f0-418c-4580-bd4c-0d7910a4b625",
    "metadata": {},
    "source": [
-    "# replace nulls in UserId with -2"
+    "### replace nulls in UserId with -2"
    ]
   },
   {
@@ -501,7 +501,7 @@
    "id": "845ec936-cef6-4dba-97af-69fb9c1a0751",
    "metadata": {},
    "source": [
-    "# any id --> string to prevent aggregations"
+    "### any id --> string to prevent aggregations"
    ]
   },
   {
@@ -665,7 +665,7 @@
    "id": "0e4b4f5e-f3ba-48a3-a72a-84906bdf2d6a",
    "metadata": {},
    "source": [
-    "# Checking for non textual Comments --> nothing seems wrong"
+    "### Checking for non textual Comments --> nothing seems wrong"
    ]
   },
   {
