--- a/Comments Transformation.ipynb
+++ b/Comments Transformation.ipynb
@@ -16,7 +16,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.16:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.16:4047\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -32,7 +32,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f70d029d970>"
+       "<pyspark.sql.session.SparkSession at 0x7efd6b02e6f0>"
       ]
      },
      "execution_count": 1,
@@ -57,7 +57,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.16:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.16:4047\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -99,10 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "id": "83fc1c29-096c-4c71-9bfb-2ea70c3fe594",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/04/01 22:11:57 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import *\n",
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "id": "498453f2-3e69-44af-80c5-f538e1b7dd5a",
    "metadata": {},
    "outputs": [],
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "id": "3179749f-60d9-479d-af3d-b13eb8a52223",
    "metadata": {},
    "outputs": [],
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "id": "3d6c2de1-ad0a-4e41-ba1d-47691dae0824",
    "metadata": {},
    "outputs": [
@@ -175,10 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "id": "3ede6ea1-3dbb-4eb6-8fe2-1becbe5fb36c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 0:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -210,6 +225,13 @@
       "only showing top 20 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -218,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "id": "735c4e1e-6851-45df-a766-6ca7e52ea1ab",
    "metadata": {},
    "outputs": [
@@ -228,7 +250,7 @@
        "DataFrame[summary: string, _Id: string, _PostId: string, _UserId: string, _UserDisplayName: string, _Score: string, _Text: string, _ContentLicense: string]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "id": "f1b5e06a-b6fd-4bc9-8402-a0792de9ad04",
    "metadata": {},
    "outputs": [
@@ -264,7 +286,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
    "id": "32c853c2-20b2-4bcf-ab45-857578e59fb3",
    "metadata": {},
    "outputs": [
@@ -292,7 +314,7 @@
        " '_ContentLicense']"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 11,
    "id": "ed28f13f-891e-4a0d-90a1-69dfde8e03f4",
    "metadata": {},
    "outputs": [],
@@ -337,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 12,
    "id": "8c2f7c6d-dda4-4eba-93e8-e7776dde4444",
    "metadata": {},
    "outputs": [],
@@ -355,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 13,
    "id": "de1c0f5e-5a29-40a3-972f-965044b5e83d",
    "metadata": {},
    "outputs": [
@@ -365,7 +387,7 @@
        "['Id', 'PostId', 'UserId', 'Score', 'Text', 'CreationDate', 'ContentLicense']"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 14,
    "id": "c61a82b9-9fa1-4d76-ae55-8a2fe039c29f",
    "metadata": {},
    "outputs": [],
@@ -394,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 15,
    "id": "ad9cce13-448c-4b33-9028-486e1d356738",
    "metadata": {},
    "outputs": [
@@ -445,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 16,
    "id": "61fbfb83-1e18-4110-8fad-12f843a483fe",
    "metadata": {},
    "outputs": [],
@@ -455,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 17,
    "id": "7aafb886-737e-476e-81e5-813cfdecc880",
    "metadata": {},
    "outputs": [
@@ -506,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 18,
    "id": "a4b0d0bc-bfa0-4196-9508-ddc3bc543256",
    "metadata": {},
    "outputs": [],
@@ -518,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 19,
    "id": "1db42de2-21bd-452a-80b8-54c605c39c7b",
    "metadata": {},
    "outputs": [
@@ -544,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 20,
    "id": "48fecb77-a270-413e-bc6c-e1b667472eea",
    "metadata": {},
    "outputs": [
@@ -587,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 21,
    "id": "4467389c-03ae-4107-a734-68a25436a876",
    "metadata": {},
    "outputs": [
@@ -611,7 +633,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,8 +652,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "644d57a8-8fc1-4301-b665-20b2b27f93a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_Comments.coalesce(1).write.mode(\"overwrite\").parquet(\"Dataset/SilverDataset/Comments\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "069cebbf-7ead-4e68-9311-e619fe02e055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/04/01 22:16:05 WARN MemoryManager: Total allocation exceeds 95.00% (1,019,058,573 bytes) of heap memory\n",
+      "Scaling row group sizes to 94.91% for 8 writers\n",
+      "25/04/01 22:16:05 WARN MemoryManager: Total allocation exceeds 95.00% (1,019,058,573 bytes) of heap memory\n",
+      "Scaling row group sizes to 84.36% for 9 writers\n",
+      "25/04/01 22:16:15 WARN MemoryManager: Total allocation exceeds 95.00% (1,019,058,573 bytes) of heap memory\n",
+      "Scaling row group sizes to 94.91% for 8 writers\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_Comments.write.mode(\"overwrite\").parquet(\"Dataset/SilverDataset/CommentsPartitions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f42212d7-d709-44f3-95a6-faea7d401db7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -639,7 +703,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069cebbf-7ead-4e68-9311-e619fe02e055",
+   "id": "451a0ca6-bb1f-4337-ac8b-e35ecc837ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0677cfe5-5d81-4028-abd0-1e9b9de8766a",
    "metadata": {},
    "outputs": [],
    "source": []
